# dash-to-panel

./: Makefile  Makefile.am  Settings.ui  extension.js  metadata.json.in  panelManager.js  prefs.js  taskbar.js  yuandian-panel.spec
schemas/: org.gnome.shell.extensions.dash-to-panel.gschema.xml
