EXTENSION_ID = dash-to-panel

EXTRA_MODULES =		\
	appIcons.js     \
	convenience.js  \
	intellihide.js  \
	overview.js     \
	panel.js        \
	panelManager.js \
	panelStyle.js   \
	prefs.js        \
	proximity.js    \
	taskbar.js      \
	transparency.js \
	utils.js        \
	windowPreview.js 

include ../../extension.mk
include ../../settings.mk

mediadir = $(extensiondir)/img
dist_media_DATA = \
	img/highlight_stacked_bg.svg
